fix: a concurrent decision write is detected and retried, not lost
decisions.json's read-modify-write could silently drop one writer's verdict
when two humans decided different repos of the same run concurrently, and a
lost APPROVED record is indistinguishable from "never decided" to sdd clean.

RunStore.writeDecisions now takes the SHA-256 fingerprint of the bytes the
caller read (readDecisionsSnapshot) and refuses (returns false) when the file
has changed underneath. DecisionCommand and InteractiveReview retry through
the new shared DecisionCommand.applyWithRetry: re-read, re-apply the single
transition against fresh state, up to 5 attempts, then fail loudly naming the
run rather than hang. The existing two-arg writeDecisions stays for callers
with nothing to conflict against, delegating with a fingerprint read
immediately beforehand.

Compare-then-publish is not atomic against a determined racer; the javadoc
says so rather than implying serialization. The end-to-end test forces the
race deterministically by injecting the conflicting write inside decide() —
DecisionCommand's existing per-transition extension point, called strictly
between applyWithRetry's read and its write — rather than relying on real
thread timing or adding a test-only seam to production code.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>